feat!: add experimental option to predict compound effect of multiple variants on the same transcript, allow building txdb from gff3+fasta (#972)
