# mehari/src/server/run/actix_server/mod.rs
@@ -5,10 +5,10 @@ use std::sync::Arc;
 use actix_web::ResponseError;
 use utoipa::OpenApi as _;
 
+use crate::annotate::seqvars::csq::ConsequencePredictor;
 use crate::annotate::seqvars::provider::Provider as MehariProvider;
 use crate::annotate::seqvars::{ClinvarAnnotator, FrequencyAnnotator};
 use crate::annotate::strucvars::csq::ConsequencePredictor as StrucvarConsequencePredictor;
-use crate::{annotate::seqvars::csq::ConsequencePredictor, common::GenomeRelease};
 
 pub mod gene_txs;
 pub mod seqvars_clinvar;
@@ -44,20 +44,19 @@ impl ResponseError for CustomError {}
 pub struct WebServerData {
     /// `MehariProvider` to provide the transcript info.
     #[derivative(Debug = "ignore")]
-    pub provider: std::collections::HashMap<GenomeRelease, Arc<MehariProvider>>,
+    pub provider: std::collections::HashMap<String, Arc<MehariProvider>>,
 
     /// The sequence variant consequence predictors for each assembly.
-    pub seqvars_predictors: std::collections::HashMap<GenomeRelease, ConsequencePredictor>,
+    pub seqvars_predictors: std::collections::HashMap<String, ConsequencePredictor>,
 
     /// The structural variant consequence predictors for each assembly.
-    pub strucvars_predictors:
-        std::collections::HashMap<GenomeRelease, StrucvarConsequencePredictor>,
+    pub strucvars_predictors: std::collections::HashMap<String, StrucvarConsequencePredictor>,
 
     /// The frequency annotators for each assembly.
-    pub frequency_annotators: std::collections::HashMap<GenomeRelease, FrequencyAnnotator>,
+    pub frequency_annotators: std::collections::HashMap<String, FrequencyAnnotator>,
 
     /// The clinvar annotators for each assembly.
-    pub clinvar_annotators: std::collections::HashMap<GenomeRelease, ClinvarAnnotator>,
+    pub clinvar_annotators: std::collections::HashMap<String, ClinvarAnnotator>,
 }
 
 /// Main entry point for running the REST server.
